--- a/main/core/theme/mb/templates/components/mobile-nav.html
+++ b/main/core/theme/mb/templates/components/mobile-nav.html
@@ -4,9 +4,10 @@
     <span>Каталог</span>
     <img src="{% static 'theme/mb/images/icon/catalog.svg' %}" alt="" />
   </a>
-  <button class="mobile-nav__item">
+  <button class="mobile-nav__item show-cart">
     <span>Корзина</span>
     <img src="{% static 'theme/mb/images/icon/cart-mobile.svg' %}" alt="" />
+    <span class="count-product-cart" id="count-goods">0</span>
   </button>
   <button class="mobile-nav__item" id="burger-btn">
     <span>Меню</span>
