--- a/main/core/admin/templates/admin_base.html
+++ b/main/core/admin/templates/admin_base.html
@@ -5,25 +5,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Панель администратора | Столовая Трапеза</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <title>Панель администратора</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&amp;family=Oswald:wght@200..700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'admin/css/style.css' %}" />
+    <link rel="shortcut icon" href="{% static 'theme/mb/images/favicon.ico' %}" />
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
   </head>
   <body>
     <div class="content">
       {% include 'components/admin-sidebar.html' %}
 
-      <div class="content__inner">{% comment %} {% include 'components/admin_header.html' %} {% endcomment %} {% block body %} {% endblock %}</div>
+      <div class="content__inner">{% include 'components/admin_header.html' %} {% block body %} {% endblock %}</div>
     </div>
     <script>
-      {% comment %} CKEDITOR.replace("id_description"); {% endcomment %}
+      CKEDITOR.replace("id_description");
     </script>
-    <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script async src="{% static 'admin/js/app.js' %}?v{% now 'H:i:s' %}"></script>
   </body>
 </html>
