--- a/main/core/admin/templates/gallery/gallery_add.html
+++ b/main/core/admin/templates/gallery/gallery_add.html
@@ -16,7 +16,7 @@
         <div class="page-content__row">
           <div class="page-content__col">
             <div class="form__group">
-              <label for="{{ form.name.id_for_label }}" class="form__controls-label"> <span>*</span>Наименование: </label>
+              <label for="{{ form.name.id_for_label }}" class="form__controls-label"> <span>*</span>Наименование(нужно для alt и title): </label>
               {{ form.name }} {{ form.name.errors }}
             </div>
           </div>
@@ -24,6 +24,14 @@
             <div class="form__group">
               <label for="{{ form.category.id_for_label }}" class="form__controls-label">Выбор категории :</label>
               {{ form.category }} {{ form.category.errors }}
+            </div>
+            <div class="form__group-checkbox">
+              {{ form.is_active }} {{ form.is_active.errors }}
+              <label for="{{ form.is_active.id_for_label }}" class="form__controls-label">Отображать на сайте ? :</label>
+            </div>
+            <div class="form__group-image">
+              <label for="{{ form.image.id_for_label }}" class="form__controls-label">Фотография :</label>
+              {{ form.image }} {{ form.image.errors }}
             </div>
           </div>
         </div>
