--- a/main/core/admin/templates/marketing/promo.html
+++ b/main/core/admin/templates/marketing/promo.html
@@ -2,42 +2,47 @@
 
 <div class="page">
   <div class="page__inner">
-    <div class="page__add">
-      <h1 class="page__title">Промокоды</h1>
-      <a href="{% url 'promo_add' %}" class="page__add-btn">
-        <img src="{% static 'theme/mb/images/admin/add.svg' %}" alt="" />
-        Добавить
-      </a>
+    <div class="page__top">
+      <h1 class="page__title">Слайды</h1>
+      <ul class="admin-breadcrumbs">
+        <li><a href="{% url 'admin' %}">Панель управления</a></li>
+        <li>Промокоды</li>
+      </ul>
     </div>
-    <div class="table-5">
-      <div class="head-table table-5__head">
-        <div class="head-table__image">Код</div>
-        <div class="head-table__name">Дата начала</div>
-        <div class="head-table__price">Дата окончания</div>
-        <div class="head-table__price">Скидка %</div>
-        <div class="head-table__price">Статус</div>
+    <div class="page__head">
+      <div class="page__head-tab">
+        <a href="{% url 'promo_add' %}" class="action-button">Добавить новый</a>
       </div>
-      <div class="body-table table-5__body">
-        {% for code in coupons %}
-        <div class="body-table__row">
-          <div class="body-table__image">
-            <p class="">{{ code.code }}</p>
-          </div>
-          <div class="body-table__name">
-            <p class="">{{ code.valid_from }}</p>
-          </div>
-          <div class="body-table__price">
-            <span>{{ code.valid_to }}</span>
-          </div>
-          <div class="body-table__price">
-            <span>{{ code.discount }}</span>
-          </div>
-          <div class="body-table__price">
-            <span>{{ code.active }}</span>
+    </div>
+    <div class="page__content content-page table-top">
+      {% if items %} {% comment %}
+      <p class="page_chars">Характеристики без группы</p>
+      {% endcomment %}
+      <div class="table">
+        <div class="table-header">
+          <div class="table-row">
+            <div class="table-cell">Код</div>
+            <div class="table-cell">Дата начала</div>
+            <div class="table-cell">Дака окончания</div>
+            <div class="table-cell">Действие</div>
           </div>
         </div>
-        {% endfor %}
+        <div class="table-body">
+          {% for item in items %}
+          <div class="table-row">
+            <div class="table-cell" data-label="Header 1">{{ item.code }}</div>
+            <div class="table-cell" data-label="Header 1">{{ item.valid_from }}</div>
+            <div class="table-cell" data-label="Header 1">{{ item.valid_to }}</div>
+            <div class="table-cell" data-label="Header 4">
+              <a href="{% url 'promo_edit' item.pk %}">Изменить</a>
+              <a href="{% url 'promo_delete' item.pk %}">Удалить</a>
+            </div>
+          </div>
+          {% endfor %}
+          <!-- Add more rows as needed -->
+        </div>
       </div>
+      {% endif %}
     </div>
   </div>
 </div>
