--- a/main/core/admin/templates/settings/general_settings.html
+++ b/main/core/admin/templates/settings/general_settings.html
@@ -1,96 +1,86 @@
-{% extends 'admin_base.html' %} {% load shop_tags %} {% load static %} {% block body %}
-
+{% extends 'admin_base.html' %}{% load static %} {% block body %}
 <div class="page">
   <div class="page__inner">
+    <div class="page__top">
+      <h1 class="page__title">Общие настройки и Сео главной страницы</h1>
+      <ul class="admin-breadcrumbs">
+        <li><a href="{% url 'admin' %}">Панель управления</a></li>
+        <li><a href="{% url 'admin_product' %}">Настройки</a></li>
+      </ul>
+    </div>
     <form action="." method="POST" class="form" enctype="multipart/form-data">
-      {% csrf_token %}
       <div class="page__head">
-        <div class="page__head-save">
-          <h1 class="page__title">Глобальные настройки сайта</h1>
-          <button type="submit" class="form__btn">
-            <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
-            Сохранить
-          </button>
-        </div>
         <div class="page__head-tab">
           <button type="button" data-name="basic" class="page__head-btn _active">Основные</button>
           <button type="button" data-name="seo" class="page__head-btn">Поля SEO</button>
         </div>
+        <button type="submit" class="form__btn">
+          <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
+          Сохранить
+        </button>
       </div>
+      {% csrf_token %}
       <div class="page-content _show" id="basic">
         <div class="page-content__row">
           <div class="page-content__col">
-            <div class="form__group form__group-image">
-              <label for="{{ form.logo.id_for_label }}" class="form__controls-label">Логотип <span>:</span></label>
-              {{ form.logo }} {{ form.logo.errors }}
-            </div>
             <div class="form__group">
-              <label for="{{ form.phone.id_for_label }}" class="form__controls-label">
-                <span>*</span>
-                Телефон<span>:</span>
-              </label>
+              <label for="{{ form.phone.id_for_label }}" class="form__controls-label"> <span>*</span>Номер телефона: </label>
               {{ form.phone }} {{ form.phone.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.time_work.id_for_label }}" class="form__controls-label">Время работы <span>:</span> </label>
-              {{ form.time_work }} {{ form.time_work.errors }}
+              <label for="{{ form.phone_city.id_for_label }}" class="form__controls-label"> <span>*</span>Номер телефона городской: </label>
+              {{ form.phone_city }} {{ form.phone_city.errors }}
             </div>
+
             <div class="form__group">
-              <label for="{{ form.email.id_for_label }}" class="form__controls-label">Email <span>:</span> </label>
+              <label for="{{ form.email.id_for_label }}" class="form__controls-label">Email: </label>
               {{ form.email }} {{ form.email.errors }}
             </div>
+
             <div class="form__group">
-              <label for="{{ form.address.id_for_label }}" class="form__controls-label">Адрес <span>:</span> </label>
+              <label for="{{ form.time_work.id_for_label }}" class="form__controls-label">Режим работы: </label>
+              {{ form.time_work }} {{ form.time_work.errors }}
+            </div>
+
+            <div class="form__group">
+              <label for="{{ form.address.id_for_label }}" class="form__controls-label">Адрес: </label>
               {{ form.address }} {{ form.address.errors }}
             </div>
-            <div class="form__group">
-              <label for="{{ form.map_code.id_for_label }}" class="form__controls-label">Код яндекс карты <span>:</span> </label>
-              {{ form.map_code }} {{ form.map_code.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.phone_whatsapp.id_for_label }}" class="form__controls-label">Whatsapp <span>:</span> </label>
-              {{ form.phone_whatsapp }} {{ form.phone_whatsapp.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.vk.id_for_label }}" class="form__controls-label">VK <span>:</span> </label>
-              {{ form.vk }} {{ form.vk.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.telegram.id_for_label }}" class="form__controls-label">telegram <span>:</span> </label>
-              {{ form.telegram }} {{ form.telegram.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.viber.id_for_label }}" class="form__controls-label">viber <span>:</span> </label>
-              {{ form.viber }} {{ form.telegram.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.instagram.id_for_label }}" class="form__controls-label">instagram <span>:</span> </label>
-              {{ form.instagram }} {{ form.instagram.errors }}
+          </div>
+          <div class="page-content__col">
+            <div class="form__group form__group-image">
+              <label for="{{ form.logo.id_for_label }}" class="form__controls-label">Логотип:</label>
+              {{ form.logo }} {{ form.logo.errors }}
             </div>
           </div>
         </div>
       </div>
       <div class="page-content" id="seo">
+        <!-- SEO страницы -->
         <div class="page-content__row">
           <div class="page-content__onecol">
             <div class="form__group">
-              <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label">
-                <span>*</span>
-                Заголовок<span>:</span>
-              </label>
+              <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> Заголовок h1 : </label>
               {{ form.meta_h1 }} {{ form.meta_h1.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> Meta заголовок <span>:</span> </label>
+              <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> Мета заголовок : </label>
               {{ form.meta_title }} {{ form.meta_title.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Meta описание <span>:</span> </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label">
+                Мета описание :
+                <div class="meta-lenght">0</div>
+              </label>
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_keywords.id_for_label }}" class="form__controls-label"> Meta keywords <span>:</span> </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label">Блок о нас на главной странице: </label>
+              {{ form.description }} {{ form.description.errors }}
             </div>
           </div>
         </div>
