--- a/main/core/admin/templates/static/home_page.html
+++ b/main/core/admin/templates/static/home_page.html
@@ -3,18 +3,15 @@
 <div class="page">
   <div class="page__inner">
     <div class="page__add">
-      <h1 class="page__title">Главная страница</h1>
-      <button type="submit" class="form__btn">
-        <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
-        Сохранить
-      </button>
+      <h1 class="page__title">Редактирование шаблона главной страницы</h1>
     </div>
     <form action="." method="POST" class="form" enctype="multipart/form-data">
       {% csrf_token %}
-      <div class="page-edit__item _show">
-        <div class="page-content__row">
-          <div class="page-content__onecol">
-            <div class="form__group-image">
+      <div class="page-edit__body">
+        <!-- Основные настройки -->
+        <div class="page-edit__item _show">
+          <div class="page-edit__form">
+            <div class="form__group">
               <label for="{{ form.banner.id_for_label }}" class="form__controls-label"><span>*</span>Баннера <span>:</span></label>
               {{ form.banner }} {{ form.banner.errors }}
             </div>
@@ -52,6 +49,7 @@
           </div>
         </div>
       </div>
+      <button type="submit" class="form__btn">Сохранить</button>
     </form>
   </div>
 </div>
