--- a/main/core/admin/templates/stock/stock.html
+++ b/main/core/admin/templates/stock/stock.html
@@ -1,94 +1,54 @@
-{% extends 'admin_base.html' %} {% load shop_tags %} {% load static %} {% block body %}
+{% extends 'admin_base.html' %} {% load thumbnail %} {% load static %} {% block body %}
 
 <div class="page">
   <div class="page__inner">
-    <div class="page__add">
+    <div class="page__top">
       <h1 class="page__title">Акции</h1>
-      <a href="{% url 'stock_add' %}" class="page__add-btn">
-        <img src="{% static 'theme/mb/images/admin/add.svg' %}" alt="" />
-        Добавить
-      </a>
+      <ul class="admin-breadcrumbs">
+        <li><a href="{% url 'admin' %}">Панель управления</a></li>
+        <li>Отзывы</li>
+      </ul>
+    </div>
+    <div class="page__head">
+      <div class="page__head-tab">
+        <a href="{% url 'admin_reviews_add' %}" class="action-button">Добавить новую</a>
+      </div>
     </div>
     {% if stocks.count > 0 %}
-    <div class="table-3">
-      <div class="head-table table-3__head">
-        <div class="head-table__image">Изображение</div>
-        <div class="head-table__name">Название</div>
-        <div class="head-table__action">
-          <img src="{% static 'theme/mb/images/admin/gear.svg' %}" alt="" />
+    <div class="page__content content-page table-top">
+      <div class="table">
+        <div class="table-header">
+          <div class="table-row">
+            <div class="table-cell">Изображение</div>
+            <div class="table-cell">Название</div>
+            <div class="table-cell">_____</div>
+            <div class="table-cell">Действия</div>
+          </div>
         </div>
-      </div>
-      <div class="body-table table-3__body">
-        {% for stock in stocks %}
-        <div class="body-table__row">
-          <div class="body-table__image">
-            {% if stock.image %}
-            <img src="{{ stock.image.url }}" alt="{{ stock.title }}" title="{{ stock.title }}" />
-            {% else%}
-            <img src="{% static 'admin/images/food.webp' %}" alt="" />
-            {% endif %}
-          </div>
-          <div class="body-table__name">
-            {% if stock.slug %}
-            <a href="" class="">{{ stock.title }}</a>
-            {% else %}
-            <p class="">{{ stock.title }}</p>
-            {% endif %}
-          </div>
-          <div class="body-table__action">
-            <a href="{% url 'stock_edit' stock.pk %}" class="edit">
-              <?xml version="1.0" ?><svg
-                id="Layer_1"
-                style="enable-background: new 0 0 24 24"
-                version="1.1"
-                viewBox="0 0 24 24"
-                xml:space="preserve"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-              >
-                <path
-                  d="M19.607,18.746c0,0.881-0.716,1.624-1.597,1.624H5.231c-0.881,0-1.597-0.743-1.597-1.624V5.967  c0-0.881,0.716-1.571,1.597-1.571h7.454V3.332H5.231c-1.468,0-2.662,1.168-2.662,2.636v12.778c0,1.468,1.194,2.688,2.662,2.688  h12.778c1.468,0,2.662-1.221,2.662-2.688v-7.428h-1.065V18.746z"
-                />
-                <path
-                  d="M20.807,3.17c-0.804-0.805-2.207-0.805-3.012,0l-7.143,7.143c-0.068,0.068-0.117,0.154-0.14,0.247L9.76,13.571  c-0.045,0.181,0.008,0.373,0.14,0.506c0.101,0.101,0.237,0.156,0.376,0.156c0.043,0,0.086-0.005,0.129-0.016l3.012-0.753  c0.094-0.023,0.179-0.072,0.247-0.14l7.143-7.143c0.402-0.402,0.624-0.937,0.624-1.506S21.21,3.572,20.807,3.17z M13.016,12.467  l-2.008,0.502l0.502-2.008l5.909-5.909l1.506,1.506L13.016,12.467z M20.054,5.428l-0.376,0.376l-1.506-1.506l0.376-0.376  c0.402-0.402,1.104-0.402,1.506,0c0.201,0.201,0.312,0.468,0.312,0.753C20.366,4.96,20.255,5.227,20.054,5.428z"
-                />
-              </svg>
-            </a>
-            <div class="body-table__action-hidden">
-              <a href="{% url 'stock_delete' stock.id %}" class="remove" title="Удалить продукт">
-                <?xml version="1.0" ?><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                  <defs>
-                    <style>
-                      .cls-1 {
-                        fill: none;
-                        stroke: #fff;
-                        stroke-linecap: round;
-                        stroke-linejoin: round;
-                        stroke-width: 2px;
-                      }
-                    </style>
-                  </defs>
-                  <title />
-                  <g id="trash">
-                    <rect class="cls-1" height="22" width="18" x="7" y="7" />
-                    <line class="cls-1" x1="3" x2="29" y1="7" y2="7" />
-                    <line class="cls-1" x1="13" x2="19" y1="3" y2="3" />
-                    <line class="cls-1" x1="13" x2="13" y1="12" y2="22" />
-                    <line class="cls-1" x1="19" x2="19" y1="12" y2="22" />
-                  </g>
-                </svg>
-              </a>
+        <div class="table-body">
+          {% for item in stocks %}
+          <div class="table-row">
+            <div class="table-cell">
+              {% if item.image %} {% thumbnail item.image "50x50" format="WEBP" crop="center" as im %}
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+              {% endthumbnail %} {% else%}
+              <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+              {% endif %}
             </div>
-            <button type="button" class="body-table__settings">
-              <img src="{% static 'theme/mb/images/admin/dots.svg' %}" alt="" />
-            </button>
+            <div class="table-cell">{{ item.title }}</div>
+            <div class="table-cell" data-label="Header 1"></div>
+            <div class="table-cell" data-label="Header 1">
+              <a href="{% url 'stock_edit' item.pk %}">Изменить</a>
+              <a href="{% url 'stock_delete' item.pk %}">Удалить</a>
+            </div>
           </div>
+          {% endfor %}
+          <!-- Add more rows as needed -->
         </div>
-        {% endfor %}
       </div>
     </div>
     {% else %}
-    <div class="empty">Пусто</div>
+    <div class="empty">Список акций пуст</div>
     {% endif %}
   </div>
 </div>
