--- a/main/core/admin/templates/stock/stock_add.html
+++ b/main/core/admin/templates/stock/stock_add.html
@@ -1,52 +1,58 @@
-{% extends 'admin_base.html' %}{% load static %} {% block body %}
+{% extends 'admin_base.html' %} {% load shop_tags %} {% load static %} {% block body %}
+
 <div class="page">
   <div class="page__inner">
-    <h1 class="page__title">{{ product.name }}</h1>
+    <div class="page__top">
+      <h1 class="page__title">Настройки акции</h1>
+      <ul class="admin-breadcrumbs">
+        <li><a href="{% url 'admin' %}">Панель управления</a></li>
+        <li><a href="{% url 'admin_product' %}">Акции</a></li>
+        <li>Настройки акции</li>
+      </ul>
+    </div>
     <form action="." method="POST" class="form" enctype="multipart/form-data">
-      <div class="page__head">
-        <div class="page__head-save">
-          <h1 class="page__title">Страница добавление</h1>
-          <button type="submit" class="form__btn">
-            <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
-            Сохранить
-          </button>
-        </div>
-      </div>
       {% csrf_token %}
-      <div class="page-content _show" id="basic">
+      <div class="page__head">
+        <button type="submit" class="form__btn">
+          <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
+          Сохранить
+        </button>
+      </div>
+      <div class="page-content _show">
+        <!-- Основные настройки -->
         <div class="page-content__row">
-          <div class="page-content__onecol">
+          <div class="page-content__col">
             <div class="form__group">
-              <label for="{{ form.title.id_for_label }}" class="form__controls-label"><span>*</span>Заголовок</label>
+              <label for="{{ form.title.id_for_label }}" class="form__controls-label"><span>*</span>Заголовок <span>:</span></label>
               {{ form.title }} {{ form.title.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.description.id_for_label }}" class="form__controls-label"> Текст </label>
-              {{ form.description }} {{ form.description.errors }}
             </div>
             <div class="form__group">
               <label for="{{ form.slug.id_for_label }}" class="form__controls-label">
                 <span>*</span>
-                URL
+                URL <span>:</span>
               </label>
               {{ form.slug }} {{ form.slug.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.link.id_for_label }}" class="form__controls-label"> ссылка на страницу </label>
-              {{ form.link }} {{ form.link.errors }}
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label">
+                <span>*</span>
+                Текст <span>:</span>
+              </label>
+              {{ form.description }} {{ form.description.errors }}
             </div>
-            <div class="form__group form__group-image">
-              <label for="{{ form.image.id_for_label }}" class="form__controls-label">Выбор изображения товара</label>
-              {{ form.image.src }} {{ form.image }} {{ form.image.errors }}
+          </div>
+          <div class="page-content__col">
+            <div class="form__group">
+              {{ form.validity }} {{ form.validity.errors }}
+              <label for="{{ form.validity.id_for_label }}" class="form__controls-label"> Срок действия <span>:</span> </label>
             </div>
-
+            <div class="form__group-image">
+              <label for="{{ form.image.id_for_label }}" class="form__controls-label"> Изображение <span>:</span> </label>
+              {{ form.image }} {{ form.image.errors }}
+            </div>
             <div class="form__group-checkbox">
               {{ form.status }} {{ form.status.errors }}
-              <label for="{{ form.status.id_for_label }}" class="form__controls-label"> Опубликовать ? </label>
-            </div>
-            <div class="form__group-checkbox">
-              <label for="{{ form.home_slider.id_for_label }}" class="form__controls-label"> Отображать ? </label>
-              {{ form.home_slider }} {{ form.home_slider.errors }}
+              <label for="{{ form.status.id_for_label }}" class="form__controls-label">Статус публикации <span>:</span> </label>
             </div>
           </div>
         </div>
