--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -7,15 +7,13 @@
         <div class="top-main__left">
           <div class="top-main__item">
             <div class="top-main__address">Яковлева, 41а</div>
-            <a href="tel:+73822210915" class="top-main__phone"
-              >+7(3822)-210-915
+            <a href="tel:+73822210915" class="top-main__phone">+7(3822)-210-915
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
           <div class="top-main__item">
             <div class="top-main__address">Демьяна Бедного, 16а ст1</div>
-            <a href="tel:+73822224018" class="top-main__phone"
-              >+7(3822)-224-018
+            <a href="tel:+73822224018" class="top-main__phone">+7(3822)-224-018
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
@@ -71,7 +69,35 @@
     </div>
   </section>
 
-  <section class="index-catalog" style="display: none">
+  <section class="index-service">
+    <div class="index-service__container">
+      <h2 class="_title index-service__title">Оказываемые виды услуг</h2>
+    </div>
+    <div class="index-service__cards">
+      <a href="#" class="index-service__card">
+        <img src="{% static 'theme/mb/images/service-1.jpg' %}" alt="">
+        <span class="index-service__count">01</span>
+        <p class="index-service__title">Изготовление памятников из гранита и мрамора</p>
+      </a>
+      <a href="#" class="index-service__card">
+        <span class="index-service__count">02</span>
+        <img src="{% static 'theme/mb/images/service-2.jpg' %}" alt="">
+        <p class="index-service__title">Установка памятников</p>
+      </a>
+      <a href="#" class="index-service__card">
+        <span class="index-service__count">03</span>
+        <img src="{% static 'theme/mb/images/service-3.jpg' %}" alt="">
+        <p class="index-service__title">Гравировка на памятниках</p>
+      </a>
+      <a href="#" class="index-service__card">
+        <span class="index-service__count">04</span>
+        <img src="{% static 'theme/mb/images/service-4.jpg' %}" alt="">
+        <p class="index-service__title">Благоустройство мест захоронения</p>
+      </a>
+    </div>
+  </section>
+
+  <section class="index-catalog">
     <div class="index-catalog__container">
       <h2 class="index-catalog__title">Каталог</h2>
       <div class="index-catalog__inner">
@@ -164,7 +190,8 @@
             </li>
           </ul>
           <div class="index-catalog__cards">
-            {% if products %} {% for product in products %} {% include '../includes/card.html' with product=product %} {% endfor %} {% else %}
+            {% if products %} {% for product in products %} {% include '../includes/card.html' with product=product %}
+            {% endfor %} {% else %}
             <div class="empty-info">
               <p>Товара нет</p>
             </div>
@@ -183,12 +210,13 @@
     </div>
   </section>
 
+
+
   <section class="index-work">
     <div class="index-work__container">
       <h2 class="index-work__title">Наши работы</h2>
       <div class="index-work__links">
         {% if gallery_category %} {% for cat in gallery_category %}
-
         <a href="{{ cat.slug }}" class="{% if forloop.first %}_active {% endif %}">{{ cat.name }}</a>
         {% endfor %} {% endif %}
       </div>
@@ -196,7 +224,9 @@
       <div class="index-work__grid {% if forloop.first %}_active {% endif %}" id="{{ gal_cat.slug }}">
         {% for image in gallery %} {% if image.category.name == gal_cat.name %}
         <div class="index-work__item">
-          <img src="{{ image.image.url }}" alt="" />
+          {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
+          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+          {% endthumbnail %}
         </div>
         {% endif %} {% endfor %}
       </div>
@@ -217,13 +247,15 @@
             <div class="reviews__wrapper swiper-wrapper">
               <div class="reviews__slide swiper-slide">
                 <p class="reviews__text">
-                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на отлично, рекомендую надёжная организация. Спасибо большое
+                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
+                  отлично, рекомендую надёжная организация. Спасибо большое
                 </p>
                 <p class="reviews__name">Nina Kartashova</p>
               </div>
               <div class="reviews__slide swiper-slide">
                 <p class="reviews__text">
-                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на отлично, рекомендую надёжная организация. Спасибо большое
+                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
+                  отлично, рекомендую надёжная организация. Спасибо большое
                 </p>
                 <p class="reviews__name">Nina Kartashova</p>
               </div>
@@ -247,7 +279,8 @@
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+                производство</p>
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -298,7 +331,8 @@
                 <div class="form__agreement">
                   <input type="checkbox" name="agrement" id="id_agrement" checked />
                   <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                      конфиденциальности</a>
                   </label>
                 </div>
               </div>
