--- a/main/core/theme/mb/templates/components/mobile-nav.html
+++ b/main/core/theme/mb/templates/components/mobile-nav.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %}{% load carts_tag %}
 <div class="mobile-nav">
   <a href="{% url 'category' %}" class="mobile-nav__item">
     <span>Каталог</span>
@@ -7,7 +7,9 @@
   <button class="mobile-nav__item show-cart">
     <span>Корзина</span>
     <img src="{% static 'theme/mb/images/icon/cart-mobile.svg' %}" alt="" />
-    <span class="count-product-cart" id="count-goods">0</span>
+    {% user_carts request as carts %} {% if carts %}
+    <span class="count-product-cart" id="count-goods">{{ carts.total_quantity }}</span>
+    {% endif %}
   </button>
   <button class="mobile-nav__item" id="burger-btn">
     <span>Меню</span>
