--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -28,7 +28,7 @@
             это не только передача информации, но и способ выразить характер усопшего. Предлагаем свои услуги по изготовлению надписей и нанесению изображений.
           </p>
           <div class="hero__buttons">
-            <button type="button" class="hero__button hero__button--blue" data-popup="zakaz" data-order="Гравировка">Заказать услугу</button>
+            <button type="button" class="hero__button hero__button--blue" data-popup="order-service" data-order="Гравировка">Заказать услугу</button>
             <button type="button" class="hero__button hero__button--small">?</button>
           </div>
         </div>
