--- a/main/core/theme/mb/templates/base.html
+++ b/main/core/theme/mb/templates/base.html
@@ -1,173 +1,172 @@
-{% load static %}
+{% load recaptcha3 %}{% load static %}
+
 <!DOCTYPE html>
 <html lang="ru" class="">
+  <head>
+    <title>{{ title }}</title>
+    <meta charset="UTF-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="{% static 'theme/mb/css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'libs/venobox.min.css' %}" />
+    <link rel="shortcut icon" href="{% static 'theme/mb/images/favicon.ico' %}" />
+    <!-- <meta name="robots" content="noindex, nofollow"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157" />
+    {% recaptcha_init %} {% recaptcha_ready action_name='homepage' %}
+  </head>
 
-<head>
-  <title>{{ title }}</title>
-  <meta charset="UTF-8" />
-  <meta name="format-detection" content="telephone=no" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="{% static 'theme/mb/css/main.css' %}" />
-  <link rel="stylesheet" href="{% static 'libs/venobox.min.css' %}" />
-  <link rel="shortcut icon" href="{% static 'theme/mb/images/favicon.ico' %}" />
-  <!-- <meta name="robots" content="noindex, nofollow"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157" />
-</head>
+  <body>
+    <div class="wrapper">
+      {% if request.path == '/' %} {% include "./components/header.html" %} {% else %} {% include "./components/header-single.html" %} {% endif %} {% block content %} {% endblock
+      %} {% include "./components/footer.html" %} {% include "./components/notification/modal.html" %} {% include "./components/mini-cart.html" %} {% include
+      "./components/popup.html" %} {% include "./components/mobile-nav.html" %}
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
-<body>
-  <div class="wrapper">
-    {% if request.path == '/' %} {% include "./components/header.html" %} {% else %}
-    {% include "./components/header-single.html" %} {% endif %}
-    {% block content %} {% endblock %} {% include "./components/footer.html" %}
-    {% include "./components/notification/modal.html" %} {% include "./components/mini-cart.html" %}
-    {% include "./components/popup.html" %} {% include "./components/mobile-nav.html" %}
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+      // Теперь + - количества товара
+      // Обработчик события для уменьшения значения
+      $(document).on("click", ".decrement", function () {
+        // Берем ссылку на контроллер django из атрибута data-cart-change-url
+        var url = $(this).data("cart-change-url");
+        // Берем id корзины из атрибута data-cart-id
+        var cartID = $(this).data("cart-id");
+        // Ищем ближайшеий input с количеством
+        var $input = $(this).closest(".mini-cart__counter").find(".number");
+        // Берем значение количества товара
+        var currentValue = parseInt($input.val());
+        // Если количества больше одного, то только тогда делаем -1
+        if (currentValue > 1) {
+          $input.val(currentValue - 1);
+          // Запускаем функцию определенную ниже
+          // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
+          updateCart(cartID, currentValue - 1, -1, url);
+        }
+      });
 
-  <script>
-    // Теперь + - количества товара
-    // Обработчик события для уменьшения значения
-    $(document).on("click", ".decrement", function () {
-      // Берем ссылку на контроллер django из атрибута data-cart-change-url
-      var url = $(this).data("cart-change-url");
-      // Берем id корзины из атрибута data-cart-id
-      var cartID = $(this).data("cart-id");
-      // Ищем ближайшеий input с количеством
-      var $input = $(this).closest(".mini-cart__counter").find(".number");
-      // Берем значение количества товара
-      var currentValue = parseInt($input.val());
-      // Если количества больше одного, то только тогда делаем -1
-      if (currentValue > 1) {
-        $input.val(currentValue - 1);
+      // Обработчик события для увеличения значения
+      $(document).on("click", ".increment", function () {
+        // Берем ссылку на контроллер django из атрибута data-cart-change-url
+        var url = $(this).data("cart-change-url");
+        // Берем id корзины из атрибута data-cart-id
+        var cartID = $(this).data("cart-id");
+        // Ищем ближайшеий input с количеством
+        var $input = $(this).closest(".mini-cart__counter").find(".number");
+        // Берем значение количества товара
+        var currentValue = parseInt($input.val());
+
+        $input.val(currentValue + 1);
+
         // Запускаем функцию определенную ниже
         // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
-        updateCart(cartID, currentValue - 1, -1, url);
+        updateCart(cartID, currentValue + 1, 1, url);
+      });
+
+      function updateCart(cartID, quantity, change, url) {
+        $.ajax({
+          type: "POST",
+          url: url,
+          data: {
+            cart_id: cartID,
+            quantity: quantity,
+            csrfmiddlewaretoken: $("[name=csrfmiddlewaretoken]").val(),
+          },
+
+          success: function (data) {
+            // Изменяем количество товаров в корзине
+            var goodsInCartCount = $("#mini-cart-count");
+            var cartCount = parseInt(goodsInCartCount.text() || 0);
+            cartCount += change;
+            goodsInCartCount.text(cartCount);
+
+            // Меняем содержимое корзины
+            var cartItemsContainer = $("#cart-item");
+            cartItemsContainer.html(data.cart_items_html);
+          },
+          error: function (data) {
+            console.log("Ошибка при добавлении товара в корзину");
+          },
+        });
       }
-    });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    // Обработчик события для увеличения значения
-    $(document).on("click", ".increment", function () {
-      // Берем ссылку на контроллер django из атрибута data-cart-change-url
-      var url = $(this).data("cart-change-url");
-      // Берем id корзины из атрибута data-cart-id
-      var cartID = $(this).data("cart-id");
-      // Ищем ближайшеий input с количеством
-      var $input = $(this).closest(".mini-cart__counter").find(".number");
-      // Берем значение количества товара
-      var currentValue = parseInt($input.val());
-
-      $input.val(currentValue + 1);
-
-      // Запускаем функцию определенную ниже
-      // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
-      updateCart(cartID, currentValue + 1, 1, url);
-    });
-
-    function updateCart(cartID, quantity, change, url) {
-      $.ajax({
-        type: "POST",
-        url: url,
-        data: {
-          cart_id: cartID,
-          quantity: quantity,
-          csrfmiddlewaretoken: $("[name=csrfmiddlewaretoken]").val(),
-        },
-
-        success: function (data) {
-          // Изменяем количество товаров в корзине
-          var goodsInCartCount = $("#mini-cart-count");
-          var cartCount = parseInt(goodsInCartCount.text() || 0);
-          cartCount += change;
-          goodsInCartCount.text(cartCount);
-
-          // Меняем содержимое корзины
-          var cartItemsContainer = $("#cart-item");
-          cartItemsContainer.html(data.cart_items_html);
-        },
-        error: function (data) {
-          console.log("Ошибка при добавлении товара в корзину");
+    <script type="module">
+      const swiper = new Swiper(".index-slider__slider", {
+        effect: "fade",
+        loop: true,
+        spaceBetween: 20,
+        navigation: {
+          nextEl: ".index-slider__next",
+          prevEl: ".index-slider__prev",
         },
       });
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-  <script type="module">
-    const swiper = new Swiper(".index-slider__slider", {
-      effect: "fade",
-      loop: true,
-      spaceBetween: 20,
-      navigation: {
-        nextEl: ".index-slider__next",
-        prevEl: ".index-slider__prev",
-      },
-    });
+      const swiper_reviews = new Swiper(".reviews__slider", {
+        slidesPerView: 1,
+        //slidesPerGroup: 1,
+        loop: true,
+        spaceBetween: 20,
+        navigation: {
+          nextEl: ".index-reviews__next",
+          prevEl: ".index-reviews__prev",
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          dynamicBullets: true,
+        },
+      });
 
-    const swiper_reviews = new Swiper(".reviews__slider", {
-      slidesPerView: 1,
-      //slidesPerGroup: 1,
-      loop: true,
-      spaceBetween: 20,
-      navigation: {
-        nextEl: ".index-reviews__next",
-        prevEl: ".index-reviews__prev",
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        dynamicBullets: true,
-      },
-    });
+      const swiper_about = new Swiper(".index-about__slider", {
+        slidesPerView: 1,
+        //slidesPerGroup: 1,
+        loop: true,
+        navigation: {
+          nextEl: ".index-reviews__next",
+          prevEl: ".index-reviews__prev",
+        },
+        autoplay: {
+          delay: 5000,
+        },
 
-    const swiper_about = new Swiper(".index-about__slider", {
-      slidesPerView: 1,
-      //slidesPerGroup: 1,
-      loop: true,
-      navigation: {
-        nextEl: ".index-reviews__next",
-        prevEl: ".index-reviews__prev",
-      },
-      autoplay: {
-        delay: 5000,
-      },
+        pagination: {
+          el: ".swiper-pagination",
+          type: "bullets",
+        },
+      });
 
-      pagination: {
-        el: ".swiper-pagination",
-        type: "bullets",
-      },
-    });
+      const product__slider = new Swiper(".product__slider", {
+        // Optional parameters
+        spaceBetween: 20,
+        direction: "horizontal",
+        loop: true,
 
-    const product__slider = new Swiper(".product__slider", {
-      // Optional parameters
-      spaceBetween: 20,
-      direction: "horizontal",
-      loop: true,
+        // If we need pagination
+        pagination: {
+          el: ".swiper-pagination",
+        },
 
-      // If we need pagination
-      pagination: {
-        el: ".swiper-pagination",
-      },
-
-      // Navigation arrows
-      navigation: {
-        nextEl: ".product__button-next",
-        prevEl: ".product__button-prev",
-      },
-    });
-  </script>
-  <script src="{% static 'theme/mb/js/mask.js' %}"></script>
-  <script src="{% static 'libs/venobox.min.js' %}"></script>
-  <script>
-    new VenoBox({
-      selector: ".product__slide-link"
-    });
-  </script>
-  <script src="{% static 'theme/mb/js/index.js' %}"></script>
-</body>
-
+        // Navigation arrows
+        navigation: {
+          nextEl: ".product__button-next",
+          prevEl: ".product__button-prev",
+        },
+      });
+    </script>
+    <script src="{% static 'theme/mb/js/mask.js' %}"></script>
+    <script src="{% static 'libs/venobox.min.js' %}"></script>
+    <script>
+      new VenoBox({
+        selector: ".product__slide-link",
+      });
+    </script>
+    <script src="{% static 'theme/mb/js/index.js' %}"></script>
+  </body>
 </html>
